# exp-micro

./: .gitignore  NOTES.md  README.md  docker-compose.yml  prometheus.yml  register_consul.sh
consul/: deregister_consul.sh
docs/: Phase1.md  Phase2.md  Phase3.md  Phase4.md  Phase5.md  Phase6.md  tools-advanced.md
elixir/: mix.exs  phoenix-consul.json
elixir/config/: config.exs
elixir/hello/: .env  Dockerfile  README.md  UpAndRunning.md  elixir-consul.json
elixir/hello/config/: dev.exs  releases.exs
elixir/hello/lib/hello_web/: router.ex
elixir/lib/hello_web/: endpoint.ex
expressjs/: Dockerfile  README.md  express-consul.json  main.js  monitoring.js  package-lock.json  package.json  tracing.js
fastapi/: Dockerfile  README.md  fastapi-consul.json  main.py  pyproject.toml  requirements.txt
fastapi/app/: main.py
gin/: Dockerfile  README.md  go-consul.json  go.sum
go/: Dockerfile  README.md  go-consul.json  go.mod  go.sum  main.go
helidon-se/: Dockerfile  Dockerfile.jlink  Dockerfile.native  README.md  app.yaml  helidon-consul.json  pom.xml
helidon-se/src/main/resources/: application.yaml
luminous-clj/: Capstanfile  Dockerfile  Procfile  README.md  luminous-consul.json  project.clj
luminous-clj/env/dev/clj/: user.clj
luminous-clj/resources/docs/: docs.md
luminous-clj/resources/html/: base.html
micronaut/: Dockerfile  README.md  micronaut-consul.json  pom.xml
phoenix/: README.md  mix.exs
phoenix/config/: prod.exs  releases.exs  test.exs
phoenix/lib/hello/: application.ex
quarkus/: README.md  pom.xml  quarkus-consul.json
(+49 files in other folders)
